# python-playground

./: .gitignore  README.md
AiLearning/: AILearning.pyproj  AiLearning.slnx  pyproject.toml
AiLearning/InsertAndQueryVectorDatabase/: InsertEmbeddings.py  QueryVectorialDB.py
AiLearning/Rag/: AskWithRagContext.py  ChunkFilesIntoCosmos.py  SetupCosmosVectorContainer.py
AiLearning/Testing/: CallToOpenAI.py
DockerHelloWorld/: DockerHelloWorld.pyproj  Dockerfile
HelloWorldDocker/: DockerHelloWorld.slnx
HelloWorldPoetry/: PoetryHelloWorld.pyproj  PoetryHelloWorld.slnx
OpenAIApi/: JsonProcessing.py  OpenAIApi.py  OpenAIApi.pyproj  OpenAIApi.slnx  RegexProcessing.py
PoetryHelloWorld/: PoetryHelloWorld.slnx  pyproject.toml
PromptEngineering/: LangChain.py  LangChainExpressionLanguage.py  PromptEngineering.py  PromptEngineering.pyproj  PromptEngineering.slnx  pyproject.toml  requirements.txt
PromptEngineering/Embeddings/: CallToInsertEmbeddingsIntoCosmos.py  CallToQueryEmbeddingsFromCosmos.py  ManualCallToGetEmbeddingsFromText.py
PromptEngineering/LangChain/: LangChain.py  LangChainExpressionLanguage.py
PromptEngineering/Rag/: CallToDoQuestionAndUseRag.py
tools/FileConverter/: FileConverter.py  FileConverter.pyproj  FileConverter.slnx  pyproject.toml
tools/FileEnlarger/: FileEnlarger.py  FileEnlarger.pyproj  FileEnlarger.slnx  pyproject.toml
