[tool.poetry]
name = "PromptEngineering"
version = "0.1.0"
description = "Ejemplo uso programatico AI"
authors = ["Mario Codes <mariocodes1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
python-dotenv = "^1.2.1"
dotenv = "^0.9.9"
pandas = "^2.3.3"
openai = "^2.11.0"
langchain-openai = "^1.1.7"
langchain = "^1.2.3"

[tool.poetry.scripts]
manual-prompt = "PromptEngineering:main"
langchain-base = "LangChain:main"
langchain-lcel = "LangChainExpressionLanguage:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"