[tool.poetry]
name = "fileconverter"
version = "0.1.0"
description = "python program which accepts a pdf as input, converts into base64 and pastes it into your clipboard"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyperclip = "^1.11.0"

[tool.poetry.scripts]
file-converter = "FileConverter:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
